[gd_scene load_steps=38 format=2]

[ext_resource path="res://Sprites/Static/16.png" type="Texture" id=1]
[ext_resource path="res://Sprites/HUD/room_buttons.png" type="Texture" id=2]
[ext_resource path="res://Sprites/HUD/map.png" type="Texture" id=3]
[ext_resource path="res://Sprites/CamRooms/room1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Tablet/144.png" type="Texture" id=5]
[ext_resource path="res://Sprites/HUD/bar_click.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Static/14.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Tablet/133.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Tablet/46.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Tablet/138.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Tablet/141.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Tablet/137.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Tablet/140.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Tablet/136.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Static/20.png" type="Texture" id=15]
[ext_resource path="res://Sprites/CamRooms/room2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Office/office.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Tablet/132.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Static/12.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Tablet/139.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Tablet/142.png" type="Texture" id=21]
[ext_resource path="res://Scripts/office_scroll.gd" type="Script" id=22]
[ext_resource path="res://Scripts/Camera/tablet_raise_button.gd" type="Script" id=23]
[ext_resource path="res://Scripts/Camera/cam_switching.gd" type="Script" id=24]
[ext_resource path="res://Shaders/equirectangular_perspective.gdshader" type="Shader" id=25]
[ext_resource path="res://Sprites/CamRooms/room4.png" type="Texture" id=26]
[ext_resource path="res://Sprites/CamRooms/room3.png" type="Texture" id=27]
[ext_resource path="res://Scripts/chara_ai.gd" type="Script" id=28]
[ext_resource path="res://AnimationTree/animtree_camera.tres" type="AnimationNodeBlendTree" id=29]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 20 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": false,
"name": "lift",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 25 )
shader_param/fov = 0.37
shader_param/x_stretch = 54.0
shader_param/y_stretch = 30.0

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera_Elements/Cam_HUD/Static:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.235294 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera_Elements/Cam_Rooms/room1:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1280, 2880 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "cam_scroll"
length = 16.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera_Elements/Cam_Rooms/room1:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 5, 11, 13 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1280, 2880 ), Rect2( 0, 0, 1280, 2880 ), Rect2( 320, 0, 1280, 2880 ), Rect2( 320, 0, 1280, 2880 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera_Elements/Cam_Rooms/room2:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 320, 0, 1280, 2880 ), Rect2( 320, 0, 1280, 2880 ), Rect2( 0, 0, 1280, 2880 ), Rect2( 0, 0, 1280, 2880 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera_Elements/Cam_Rooms/room3:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 4, 10, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1280, 1440 ), Rect2( 0, 0, 1280, 1440 ), Rect2( 320, 0, 1280, 1440 ), Rect2( 320, 0, 1280, 1440 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera_Elements/Cam_Rooms/room4:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 6, 8, 14, 16 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 320, 0, 1280, 1440 ), Rect2( 320, 0, 1280, 1440 ), Rect2( 0, 0, 1280, 1440 ), Rect2( 0, 0, 1280, 1440 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "static_boot"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Camera_Elements/Cam_HUD/Static:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.235294 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "static_idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Camera_Elements/Cam_HUD/Static:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 0.235294 ), Color( 1, 1, 1, 0.235294 ) ]
}

[sub_resource type="AnimationNodeStateMachinePlayback" id=18]

[node name="Nights" type="Node2D"]

[node name="Office" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 17 )
centered = false
offset = Vector2( -640, 0 )
script = ExtResource( 22 )

[node name="Tablet" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
z_index = 15
frames = SubResource( 5 )
animation = "lift"
speed_scale = 10.0
centered = false

[node name="Tablet_Raise" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 960, 1013 )
scale = Vector2( 1.5, 1.5 )
z_index = 20
script = ExtResource( 23 )

[node name="TextureButton" type="TextureButton" parent="Tablet_Raise"]
margin_left = -320.0
margin_top = -26.0
margin_right = 320.0
margin_bottom = 45.0
focus_mode = 0
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )

[node name="Camera_Elements" type="Node2D" parent="."]
visible = false
script = ExtResource( 24 )

[node name="Cam_Rooms" type="Node2D" parent="Camera_Elements"]
position = Vector2( -320, 0 )
scale = Vector2( 1.5, 1.5 )
z_index = 16

[node name="room1" type="Sprite" parent="Camera_Elements/Cam_Rooms"]
position = Vector2( 213.333, 0 )
texture = ExtResource( 4 )
centered = false
vframes = 4
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 2880 )

[node name="room2" type="Sprite" parent="Camera_Elements/Cam_Rooms"]
visible = false
position = Vector2( 213.333, 0 )
texture = ExtResource( 16 )
centered = false
vframes = 4
region_enabled = true
region_rect = Rect2( 7.49432, 0, 1280, 2880 )

[node name="room3" type="Sprite" parent="Camera_Elements/Cam_Rooms"]
visible = false
position = Vector2( 213.333, 0 )
texture = ExtResource( 27 )
centered = false
vframes = 2
region_enabled = true
region_rect = Rect2( 205.839, 0, 1280, 1440 )

[node name="room4" type="Sprite" parent="Camera_Elements/Cam_Rooms"]
visible = false
position = Vector2( 213.333, 0 )
texture = ExtResource( 26 )
centered = false
vframes = 2
region_enabled = true
region_rect = Rect2( 320, 0, 1280, 1440 )

[node name="Cam_Buttons" type="Node2D" parent="Camera_Elements"]
z_index = 19

[node name="Room1" type="Button" parent="Camera_Elements/Cam_Buttons"]
margin_left = 1540.0
margin_top = 528.0
margin_right = 1612.0
margin_bottom = 574.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="Room2" type="Button" parent="Camera_Elements/Cam_Buttons"]
margin_left = 1585.0
margin_top = 641.0
margin_right = 1657.0
margin_bottom = 687.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="Room3" type="Button" parent="Camera_Elements/Cam_Buttons"]
margin_left = 1311.0
margin_top = 621.0
margin_right = 1383.0
margin_bottom = 667.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="Room4" type="Button" parent="Camera_Elements/Cam_Buttons"]
margin_left = 1635.0
margin_top = 879.0
margin_right = 1707.0
margin_bottom = 925.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="Cam_HUD" type="Node2D" parent="Camera_Elements"]
scale = Vector2( 1.5, 1.5 )
z_index = 18

[node name="Static" type="AnimatedSprite" parent="Camera_Elements/Cam_HUD"]
modulate = Color( 1, 1, 1, 0.235294 )
frames = SubResource( 3 )
speed_scale = 5.0
playing = true
centered = false

[node name="Map" type="Sprite" parent="Camera_Elements/Cam_HUD"]
position = Vector2( 875, 300 )
texture = ExtResource( 3 )
centered = false

[node name="ReferenceRect" type="ReferenceRect" parent="Camera_Elements/Cam_HUD"]
anchor_left = 1.0
anchor_top = 0.603
anchor_right = 1.0
anchor_bottom = 0.603
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 710.0
mouse_filter = 2
border_color = Color( 1, 1, 1, 1 )
border_width = 2.0
editor_only = false

[node name="CharacterAI" type="Node2D" parent="."]
visible = false
script = ExtResource( 28 )

[node name="BonnieTimer" type="Timer" parent="CharacterAI"]
wait_time = 4.97
autostart = true

[node name="FreddyTimer" type="Timer" parent="CharacterAI"]
wait_time = 3.02
autostart = true

[node name="Effects" type="Node2D" parent="."]
z_index = 14

[node name="Perspective_Shader" type="ColorRect" parent="Effects"]
material = SubResource( 2 )
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/cam_scroll = SubResource( 9 )
anims/static_boot = SubResource( 8 )
anims/static_idle = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource( 29 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Blend/blend_amount = 0.5
parameters/StaticState/playback = SubResource( 18 )

[connection signal="animation_finished" from="Tablet" to="Tablet_Raise" method="_tablet_animation_finished"]
[connection signal="mouse_entered" from="Tablet_Raise/TextureButton" to="Tablet_Raise" method="on_mouse_enter"]
[connection signal="mouse_exited" from="Tablet_Raise/TextureButton" to="Tablet_Raise" method="on_mouse_exit"]
[connection signal="pressed" from="Tablet_Raise/TextureButton" to="Tablet_Raise" method="_on_click"]
[connection signal="pressed" from="Camera_Elements/Cam_Buttons/Room1" to="Camera_Elements" method="_on_click_cam" binds= [ 0 ]]
[connection signal="pressed" from="Camera_Elements/Cam_Buttons/Room2" to="Camera_Elements" method="_on_click_cam" binds= [ 1 ]]
[connection signal="pressed" from="Camera_Elements/Cam_Buttons/Room3" to="Camera_Elements" method="_on_click_cam" binds= [ 2 ]]
[connection signal="pressed" from="Camera_Elements/Cam_Buttons/Room4" to="Camera_Elements" method="_on_click_cam" binds= [ 3 ]]
[connection signal="timeout" from="CharacterAI/BonnieTimer" to="CharacterAI" method="_char_timer_timeout" binds= [ 0 ]]
[connection signal="timeout" from="CharacterAI/FreddyTimer" to="CharacterAI" method="_char_timer_timeout" binds= [ 1 ]]
